# YARP devices.
add_subdirectory(AravisGigE)
add_subdirectory(CanBusBroker)
add_subdirectory(CanBusFake)
add_subdirectory(CanBusHico)
add_subdirectory(CanBusPeak)
add_subdirectory(CanBusSocket)
add_subdirectory(CuiAbsolute)
add_subdirectory(DextraCanControlBoard)
add_subdirectory(DextraSerialControlBoard)
add_subdirectory(EmulatedControlBoard)
add_subdirectory(FakeJoint)
add_subdirectory(JointCalibrator)
add_subdirectory(Jr3Mbed)
add_subdirectory(Jr3Pci)
add_subdirectory(LacqueyFetch)
add_subdirectory(LeapMotionSensor)
add_subdirectory(PhidgetSpatial)
add_subdirectory(SpaceNavigator)
add_subdirectory(TechnosoftIpos)
add_subdirectory(TextilesHand)
add_subdirectory(WiimoteSensor)

# Port monitor plugins.
add_subdirectory(PortMonitorPlugins)
